--- a/web-app/src/index.css
+++ b/web-app/src/index.css
@@ -1,3 +1,17 @@
+:root{
+  --body_background: #f6f8ed;
+  --body_aside: #f1f1e7;
+  --body_color: rgb(51, 58, 64);
+  --body_selected: #cdcdc5;
+}
+
+[data-theme="dark"]{
+  --body_background: #2c3338;
+  --body_aside: black;
+  --body_color: white;
+  --body_selected: darkslategrey;
+}
+
 * {
   box-sizing: border-box;
 }
@@ -6,7 +20,7 @@ body {
   margin: 0;
   font-size: 18px;
   color: white;
-  background-color: rgb(44, 51, 56);
+  background-color: var(--body_background);
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
